feat: use sphinx_design, change urls / keil / setup

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Sphinx>=5.3.0
 furo>=2022.9.29
 # Since we think these tools can't have breaking change.
 myst-parser>=0.18.1
+sphinx_design>=0.3.0
 sphinx-copybutton>=0.5.1
 sphinx-last-updated-by-git>=0.3.4
 sphinxext-opengraph>=0.7.2
