feat: add sphinx-autobuild

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ sphinx_design>=0.3.0
 sphinx-copybutton>=0.5.1
 sphinx-last-updated-by-git>=0.3.4
 sphinxext-opengraph>=0.7.2
+sphinx-autobuild>=2021.3
