--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 # Since they are updated frequently.
-Sphinx>=5.3.0
-furo>=2022.9.29
+Sphinx>=7.1.2
+furo>=2023.07.26
+
 # Since we think these tools can't have breaking change.
 myst-parser>=0.18.1
 sphinx_design>=0.3.0
 sphinx-copybutton>=0.5.1
 sphinx-last-updated-by-git>=0.3.4
 sphinxext-opengraph>=0.7.2
+sphinxext-rediraffe>=0.2.7
 
 # dev requirements
 sphinx-autobuild>=2021.3
